--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ section p {
 	color: #454545;
 }
 section h1 {
-	font: 32px 'Open Sans';
+	color: blueviolet;
+    font: 32px 'Open Sans';
 	font-weight: bold;
 }
 section p {
